# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: python-ci.yml
diff_calculator/internal/: cli.py  diffcalc.py
diff_calculator/scripts/: entry_point.py
diffcalc/cli/: cli.py
diffcalc/internal/: diffcalc.py  tools.py
diffcalc/parser/: file_parser.py
diffcalc/scripts/: main.py
diffcalc/tests/: test_get_diff.py  test_get_file_extension.py
diffcalculator/internal/: cli.py  diffcalc.py
diffcalculator/scripts/: main.py
diffcalculator/tests/: test_diffcalc.py  test_get_diff.py  test_get_diff_modernized.py  test_get_file_extension.py
diffcalculator/tests/test_data/: test1.yaml  test2.yaml  yaml_expected.txt
gendiff/: __init__.py  diff.py  parser.py
gendiff/cli/: cli.py
gendiff/formatter/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
gendiff/tests/: conftest.py  test_get_file_extension.py  test_plain_formatter.py  test_stylish_formatter.py
tests/: conftest.py  test_get_file_extension.py  test_json_formatter.py  test_plain_formatter.py  test_stylish_formatter.py
tests/test_data/: complex_file1_file2_json_expected.txt  file1_file2_json_expected.txt
